crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__indent-overlap-in-word.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "CAM",
            "role": "Speaker",
            "speaker_code": "CAM"
          },
          {
            "name": "JO",
            "role": "Speaker",
            "speaker_code": "JO"
          },
          {
            "name": "WESS",
            "role": "Speaker",
            "speaker_code": "WESS"
          },
          {
            "name": "FRED",
            "role": "Speaker",
            "speaker_code": "FRED"
          },
          {
            "name": "DOG",
            "role": "Environment",
            "speaker_code": "DOG"
          },
          {
            "name": "ENV",
            "role": "Environment",
            "speaker_code": "ENV"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "CAM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "JO",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "WESS",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "FRED",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Environment",
        "speaker": "DOG",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Environment",
        "speaker": "ENV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "indent-overlap-in-word",
        "media_type": "audio",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 1140362,
            "start_ms": 1139850
          },
          "content": [
            {
              "content": [
                {
                  "content": "it's",
                  "type": "text"
                }
              ],
              "raw_text": "it's",
              "span": {
                "end": 436,
                "start": 432
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "already",
                  "type": "text"
                }
              ],
              "raw_text": "already",
              "span": {
                "end": 444,
                "start": 437
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 447,
                "start": 445
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 451,
                "start": 448
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "pan",
                  "type": "text"
                }
              ],
              "raw_text": "pan",
              "span": {
                "end": 455,
                "start": 452
              },
              "type": "word"
            },
            {
              "end_ms": 1139850,
              "start_ms": 1138844,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "span": {
                "end": 478,
                "start": 475
              },
              "type": "word"
            },
            {
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "it's",
                  "type": "text"
                }
              ],
              "raw_text": "it's",
              "span": {
                "end": 487,
                "start": 483
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "done",
                  "type": "text"
                }
              ],
              "raw_text": "done",
              "span": {
                "end": 492,
                "start": 488
              },
              "type": "word"
            },
            {
              "marker": "top_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "FRED"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 1140362,
            "start_ms": 1139975
          },
          "content": [
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "Mm",
                  "type": "text"
                }
              ],
              "raw_text": "Mm",
              "span": {
                "end": 530,
                "start": 528
              },
              "type": "word"
            },
            {
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "WESS"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 1140875,
            "start_ms": 1139984
          },
          "content": [
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "duration": {
                "type": "short"
              },
              "type": "pause"
            },
            {
              "content": [
                {
                  "content": "Yeah",
                  "type": "text"
                },
                {
                  "content": {
                    "marker": "bottom_overlap_end"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": {
                    "index": 2,
                    "marker": "top_overlap_begin"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": {
                    "span": {
                      "end": 580,
                      "start": 579
                    }
                  },
                  "type": "lengthening"
                }
              ],
              "raw_text": "Yeah⌋⌈2:",
              "span": {
                "end": 580,
                "start": 568
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "but",
                  "type": "text"
                }
              ],
              "raw_text": "but",
              "span": {
                "end": 584,
                "start": 581
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "JO"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 1141652,
            "start_ms": 1140362
          },
          "content": [
            {
              "index": 2,
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "span": {
                "end": 620,
                "start": 617
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "span": {
                "end": 624,
                "start": 621
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "just",
                  "type": "text"
                }
              ],
              "raw_text": "just",
              "span": {
                "end": 629,
                "start": 625
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "set",
                  "type": "text"
                }
              ],
              "raw_text": "set",
              "span": {
                "end": 633,
                "start": 630
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "span": {
                "end": 636,
                "start": 634
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                },
                {
                  "content": {
                    "index": 2,
                    "marker": "bottom_overlap_end"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": {
                    "index": 3,
                    "marker": "top_overlap_begin"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": "side",
                  "type": "text"
                }
              ],
              "raw_text": "a⌋2⌈3side",
              "span": {
                "end": 650,
                "start": 637
              },
              "type": "word"
            },
            {
              "index": 3,
              "marker": "top_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "FRED"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 1141652,
            "start_ms": 1140875
          },
          "content": [
            {
              "content": [
                {
                  "content": "ye",
                  "type": "text"
                },
                {
                  "content": {
                    "index": 2,
                    "marker": "top_overlap_end"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": {
                    "index": 3,
                    "marker": "bottom_overlap_begin"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": {
                    "span": {
                      "end": 692,
                      "start": 691
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "s",
                  "type": "text"
                }
              ],
              "raw_text": "ye⌉2⌊3:s",
              "span": {
                "end": 693,
                "start": 681
              },
              "type": "word"
            },
            {
              "index": 3,
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "JO"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CAM": {
      "birth_date": null,
      "code": "CAM",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "CAM"
      },
      "name": "CAM",
      "role": "Speaker"
    },
    "DOG": {
      "birth_date": null,
      "code": "DOG",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Environment",
        "speaker": "DOG"
      },
      "name": "DOG",
      "role": "Environment"
    },
    "ENV": {
      "birth_date": null,
      "code": "ENV",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Environment",
        "speaker": "ENV"
      },
      "name": "ENV",
      "role": "Environment"
    },
    "FRED": {
      "birth_date": null,
      "code": "FRED",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "FRED"
      },
      "name": "FRED",
      "role": "Speaker"
    },
    "JO": {
      "birth_date": null,
      "code": "JO",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "JO"
      },
      "name": "JO",
      "role": "Speaker"
    },
    "WESS": {
      "birth_date": null,
      "code": "WESS",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "WESS"
      },
      "name": "WESS",
      "role": "Speaker"
    }
  }
}
