crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__indent-overlap-simple.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "CAM",
            "role": "Speaker",
            "speaker_code": "CAM"
          },
          {
            "name": "JO",
            "role": "Speaker",
            "speaker_code": "JO"
          },
          {
            "name": "WESS",
            "role": "Speaker",
            "speaker_code": "WESS"
          },
          {
            "name": "FRED",
            "role": "Speaker",
            "speaker_code": "FRED"
          },
          {
            "name": "DOG",
            "role": "Environment",
            "speaker_code": "DOG"
          },
          {
            "name": "ENV",
            "role": "Environment",
            "speaker_code": "ENV"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "CAM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "JO",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "WESS",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "FRED",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Environment",
        "speaker": "DOG",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Environment",
        "speaker": "ENV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "h",
                  "type": "text"
                },
                {
                  "content": {
                    "index": 2,
                    "marker": "top_overlap_begin"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": "j",
                  "type": "text"
                }
              ],
              "raw_text": "h⌈2j",
              "span": {
                "end": 398,
                "start": 392
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "i",
                  "type": "text"
                }
              ],
              "raw_text": "i",
              "span": {
                "end": 400,
                "start": 399
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "JO"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CAM": {
      "birth_date": null,
      "code": "CAM",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "CAM"
      },
      "name": "CAM",
      "role": "Speaker"
    },
    "DOG": {
      "birth_date": null,
      "code": "DOG",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Environment",
        "speaker": "DOG"
      },
      "name": "DOG",
      "role": "Environment"
    },
    "ENV": {
      "birth_date": null,
      "code": "ENV",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Environment",
        "speaker": "ENV"
      },
      "name": "ENV",
      "role": "Environment"
    },
    "FRED": {
      "birth_date": null,
      "code": "FRED",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "FRED"
      },
      "name": "FRED",
      "role": "Speaker"
    },
    "JO": {
      "birth_date": null,
      "code": "JO",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "JO"
      },
      "name": "JO",
      "role": "Speaker"
    },
    "WESS": {
      "birth_date": null,
      "code": "WESS",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "WESS"
      },
      "name": "WESS",
      "role": "Speaker"
    }
  }
}
