crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__indent.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "MARILYN",
            "role": "Speaker",
            "speaker_code": "MARI"
          },
          {
            "name": "ROY",
            "role": "Speaker",
            "speaker_code": "ROY"
          },
          {
            "name": "PETE",
            "role": "Speaker",
            "speaker_code": "PETE"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "MARI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "ROY",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "PETE",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "span": {
                "end": 234,
                "start": 231
              },
              "type": "word"
            },
            {
              "marker": "top_overlap_end",
              "type": "overlap_point"
            },
            {
              "index": 2,
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "two",
                  "type": "text"
                }
              ],
              "raw_text": "two",
              "span": {
                "end": 247,
                "start": 244
              },
              "type": "word"
            },
            {
              "index": 2,
              "marker": "top_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "ROY"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "span": {
                "end": 269,
                "start": 266
              },
              "type": "word"
            },
            {
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "PETE"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "index": 2,
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "two",
                  "type": "text"
                }
              ],
              "raw_text": "two",
              "span": {
                "end": 291,
                "start": 288
              },
              "type": "word"
            },
            {
              "index": 2,
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MARI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "index": 3,
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "three",
                  "type": "text"
                }
              ],
              "raw_text": "three",
              "span": {
                "end": 316,
                "start": 311
              },
              "type": "word"
            },
            {
              "index": 3,
              "marker": "top_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "PETE"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "index": 3,
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "three",
                  "type": "text"
                }
              ],
              "raw_text": "three",
              "span": {
                "end": 341,
                "start": 336
              },
              "type": "word"
            },
            {
              "index": 3,
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MARI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "index": 4,
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "four",
                  "type": "text"
                }
              ],
              "raw_text": "four",
              "span": {
                "end": 365,
                "start": 361
              },
              "type": "word"
            },
            {
              "index": 4,
              "marker": "top_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MARI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "index": 4,
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "four",
                  "type": "text"
                }
              ],
              "raw_text": "four",
              "span": {
                "end": 388,
                "start": 384
              },
              "type": "word"
            },
            {
              "index": 4,
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            },
            {
              "index": 5,
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "five",
                  "type": "text"
                }
              ],
              "raw_text": "five",
              "span": {
                "end": 403,
                "start": 399
              },
              "type": "word"
            },
            {
              "index": 5,
              "marker": "top_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "ROY"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "index": 4,
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "four",
                  "type": "text"
                }
              ],
              "raw_text": "four",
              "span": {
                "end": 427,
                "start": 423
              },
              "type": "word"
            },
            {
              "index": 4,
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            },
            {
              "index": 5,
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "five",
                  "type": "text"
                }
              ],
              "raw_text": "five",
              "span": {
                "end": 442,
                "start": 438
              },
              "type": "word"
            },
            {
              "index": 5,
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "PETE"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "MARI": {
      "birth_date": null,
      "code": "MARI",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "MARI"
      },
      "name": "MARILYN",
      "role": "Speaker"
    },
    "PETE": {
      "birth_date": null,
      "code": "PETE",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "PETE"
      },
      "name": "PETE",
      "role": "Speaker"
    },
    "ROY": {
      "birth_date": null,
      "code": "ROY",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "ROY"
      },
      "name": "ROY",
      "role": "Speaker"
    }
  }
}
