crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__initial-shortening.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Timmy",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Linda",
            "role": "Investigator",
            "speaker_code": "LIN"
          },
          {
            "name": "Winnie",
            "role": "Investigator",
            "speaker_code": "WIN"
          },
          {
            "name": "Gemma",
            "role": "Speaker",
            "speaker_code": "GEM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "29-FEB-1996",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hello",
                  "type": "text"
                }
              ],
              "raw_text": "hello",
              "span": {
                "end": 323,
                "start": 318
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "there",
                  "type": "shortening"
                },
                {
                  "content": "_now",
                  "type": "text"
                }
              ],
              "raw_text": "(there)_now",
              "span": {
                "end": 335,
                "start": 324
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Timmy",
      "role": "Target_Child"
    },
    "GEM": {
      "birth_date": null,
      "code": "GEM",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM"
      },
      "name": "Gemma",
      "role": "Speaker"
    },
    "LIN": {
      "birth_date": null,
      "code": "LIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN"
      },
      "name": "Linda",
      "role": "Investigator"
    },
    "WIN": {
      "birth_date": null,
      "code": "WIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN"
      },
      "name": "Winnie",
      "role": "Investigator"
    }
  }
}
